AC_INIT([martock],
        [0.0.0],
        [https://github.com/PaytonTurnage/Martock/issues],
        [martock],
        [https://github.com/PaytonTurnage/Martock])

CFLAGS="$CFLAGS -Wall -g -ggdb -Iinclude" 

AC_PROG_CC_C99
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_SRCDIR([src/martock.c], [src/world/chunk.c])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
